--- a/style.css
+++ b/style.css
@@ -65,3 +65,28 @@ a {
 a:hover {
   color: #005a9e;
 }
+
+footer {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 10px 0;
+}
+
+footer::before {
+  content: "";
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-color: #f0f0f0;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+footer p {
+  display: inline;
+  font-size: 16px;
+  font-weight: bold;
+}
